Case1 EX 3 Done

--- a/CPP EX/CPP EX.vcxproj.filters
+++ b/CPP EX/CPP EX.vcxproj.filters
@@ -26,6 +26,12 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="EX 3.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+    <ClCompile Include="EX 1.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
     <ClCompile Include="EX 2.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
